# study-diary

./: .gitignore  CREDITS.md  Cargo.toml  README.md
src/: main.rs
